--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<title>Document</title>
 </head>
 <body>
+	<div>Arrow keys = Move.  Displace the particles with the gray and red box</div>
+	<div>Spawns new particles until the count reaches 10,000</div>
+	<div>the box is immune to gravity</div>
+	<div>the black section is where the particles settle if not collided with</div>
+	
+
+
 	<script src="./phaser.js"></script>
 	<script src="./Hw2.js"></script>
 </body>
