--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div>Spawns new particles until the count reaches 10,000</div>
 	<div>the box is immune to gravity</div>
 	<div>the black section is where the particles settle if not collided with</div>
+	<div>the particles change color when they enter the blue section</div>
 	
 
 
