--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<div>the box is immune to gravity</div>
 	<div>the black section is where the particles settle if not collided with</div>
 	<div>the particles change color when they enter the blue section</div>
-	<div id="text"></div>
+	<div id = "text"></div>
     <button id="save" type="button">Save</button>
     <button id="load" type="button">Load</button>
 
 
-	<script src="/phaser.afe288af.js"></script>
-	<script src="/Hw2.50c115fc.js"></script>
+	<script src="./phaser.js"></script>
+	<script src="./Hw2.js"></script>
 </body>
 </html>
