--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>hw3</title>
-	<script type="text/javascript" src="HTTP://24.16.255.56:8888/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
 </head>
 <body>
 	<div>Arrow keys = Move.  Displace the particles with the gray and red box</div>
