--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>hw3</title>
-	<script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
+	
 </head>
 <body>
 	<div>Arrow keys = Move.  Displace the particles with the gray and red box</div>
@@ -17,7 +17,7 @@
     <button id="save" type="button">Save</button>
     <button id="load" type="button">Load</button>
 
-
+	<script src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
 	<script src="./phaser.js"></script>
 	<script src="./Hw2.js"></script>
 </body>
